# topocluster

./: .isort.cfg  Cargo.toml  README.md  clustering_analysis.py  example.py  generate_confs.sh  main.py  pyproject.toml  run.py  save_dataset.py  setup.py  test_topograd.py  topograd_example.py
conf/: configen.yaml  experiment.yaml  primary.yaml
conf/clusterer/: agglom.yaml  gmm.yaml  kmeans.yaml  pl_clusterer.yaml  spectral.yaml  tomato.yaml  topograd.yaml
conf/datamodule/: cifar10.yaml  cifar100.yaml  defaults.yaml  mnist.yaml  svhn.yaml  umnist.yaml
conf/encoder/: cifar10.yaml  gconv_ae.yaml  mnist.yaml  mnist_ae.yaml  umnist.yaml  umnist_ae.yaml
conf/pretrainer/: cifar10.yaml  defaults.yaml  mnist.yaml  umnist.yaml
conf/reducer/: none.yaml  rand.yaml  umap.yaml
conf/sampler/: greedy.yaml
conf/trainer/: cifar10.yaml  defaults.yaml  mnist.yaml  umnist.yaml
configs/: celeba_s=0_y=1_missing.yaml  cmnist_s=0_missing.yaml  cmnist_s=0_y=1_missing.yaml
ph_rs/: Cargo.toml
ph_rs/src/: lib.rs  main.rs  mod.rs  test.py
ph_rs/src/clustering/: mod.rs  zero_dim.rs
ph_rs/~/.config/nvim/undodir/: %Users%mb715%Code%topocluster%ph%Cargo.toml  %Users%mb715%Code%topocluster%ph%src%clustering%mod.rs  %Users%mb715%Code%topocluster%ph%src%clustering%zero_dim.rs  %Users%mb715%Code%topocluster%ph%src%clustering.rs  %Users%mb715%Code%topocluster%ph%src%foo.rs  %Users%mb715%Code%topocluster%ph%src%lib.rs  %Users%mb715%Code%topocluster%ph%src%main.rs  %Users%mb715%Code%topocluster%ph%src%mod.rs  %Users%mb715%Code%topocluster%ph%src%test.py
topocluster/: assignment.py  confs.py  experiment.py  knn.py  main.py  metrics.py  reduction.py  sampling.py  search.py  viz.py
topocluster/clustering/: __init__.py  common.py  dac.py  gmm.py  kmeans.py  pseudo_labelers.py  pseudo_labeling.py  sklearn.py  tomato.py  topograd.py  topograd_orig.py  utils.py
topocluster/configs/: arguments.py
topocluster/data/: __init__.py  adult.py  data_loading.py  data_modules.py  datamodules.py  dataset_wrappers.py  datasets.py  sampling.py  synthetic.py  utils.py
topocluster/layers/: __init__.py  conv.py
topocluster/layers/inn/: coupling.py  normalization.py  permutation.py
topocluster/models/: __init__.py  autoencoder.py  base.py  classifier.py  factory.py  lenet.py  methods.py  model.py  pseudo_labelers.py  selfsupervised.py
topocluster/models/configs/: __init__.py  autoencoder.py  classifiers.py
topocluster/optimisation/: __init__.py  build.py  evaluation.py  inn_training.py  k_means.py  topograd.py  train.py  utils.py
topocluster/optimisation/unsupervised/: __init__.py  common.py  k_means.py  topograd.py
topocluster/optimisation/unsupervised/topograd/: __init__.py  topograd_jnp.py  topograd_np.py  topograd_torch.py
topocluster/ph/: __init__.py  clustering.py  dtm.py  topograd.py  utils.py
topocluster/relays/: ssl.py
topocluster/rust/: lib.rs  main.rs
topocluster/rust/clustering/: zero_dim.rs
topocluster/utils/: __init__.py  loadsave.py  logging.py  numpy_ops.py  plotting.py  torch_ops.py  utils.py
typings/ph_rs/: clustering.pyi
