[tool.poetry]
name = "topocluster"
authors = ["Myles Bartlett"]
description = "Fine-tuning SSL Representations with Algebraic Topology"
version = "0.0.1"

[tool.poetry.dependencies]
python = "3.8"
wandb = "^0.10.8"
scipy = "^1.5.3"
lapjv = "^1.3.1"
pykeops = "^1.4.1"
gudhi = "^3.3.0"
eagerpy = "^0.29.0"
POT = "^0.7.0"
pytorch-lightning = "^1.4.1"
hydra-core = {git = "https://github.com/facebookresearch/hydra.git", branch= "main"}
matplotlib = "^3.3.2"
neoconfigen = {git = "https://github.com/predictive-analytics-lab/neoconfigen.git", branch="main"}
pandas = "^1.2.3"
black = "^20.8b1"
torch = "^1.8.0"
faiss-cpu = "^1.7.0"
torchvision = "^0.10.1"
numba = "^0.53.0"
scikit-learn = "^0.24.1"
conduit = {git = "https://github.com/predictive-analytics-lab/conduit.git", branch = "main"}
umap-learn = "^0.5.1"
pretrainedmodels = "^0.7.4"
fast-soft-sort = {git = "https://github.com/google-research/fast-soft-sort.git"}
palkit = {git = "https://github.com/predictive-analytics-lab/palkit.git", branch = "main" }
attrs = "^21.2.0"

[tool.poetry.dev-dependencies]
black = "*"
isort = "*"
pydocstyle = "*"
pytest = "*"
python-type-stubs = {git = "https://github.com/predictive-analytics-lab/python-type-stubs.git", branch = "main" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py38']
skip-string-normalization = true
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \~
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | conduit/hydra
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.isort]
known_third_party = ["PIL", "albumentations", "attr", "cv2", "ethicml", "kit", "numpy", "omegaconf", "pandas", "pytest", "pytorch_lightning", "requests", "sklearn", "torch", "torchaudio", "torchmetrics", "torchvision", "tqdm", "typing_extensions"]
known_future_library = []
extra_standard_library = ["dataclasses", "__future__", "typing_extensions"]
line_length = 88
profile = "black"
force_sort_within_sections = "True"
classes = ["MISSING"]

[tool.pyright]
include = ["conduit"]
exclude = ["**/node_modules", "**/__pycache__"]
typeCheckingMode = "basic"
pythonVersion = "3.7"
reportUnusedImport = "error"
reportDuplicateImport  = "error"
reportIncompatibleVariableOverride = "error"
reportOverlappingOverload = "error"
reportUntypedNamedTuple = "error"
reportConstantRedefinition = "warning"
reportMissingImports = "error"
reportMissingTypeStubs = "warning"
strictListInference = true
strictSetInference = true
strictParameterNoneValue = true
